--- a/api-aggregator/pom.xml
+++ b/api-aggregator/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>processors</artifactId>
+    <artifactId>api-aggregator</artifactId>
 
     <properties>
         <java.version>1.8</java.version>
