--- a/ibge-municipality-handler/pom.xml
+++ b/ibge-municipality-handler/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>log-sink</artifactId>
+    <artifactId>ibge-municipality-handler</artifactId>
 
     <properties>
         <java.version>1.8</java.version>
